--- a/css/styles.css
+++ b/css/styles.css
@@ -170,7 +170,7 @@ p {
 .icons-foot{
   padding: 20px 10px;
 }
-.icon-foot:hover{
+.icons-foot:hover{
   cursor:pointer;
 }
 @media (max-width: 1028px) {
